--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-isodate==0.5.1
-python-dateutil==2.4.2
-requests==2.7.0
-https://github.com/RealDolos/volapi/archive/master.zip
-exifread
+isodate>=0.5.1
+python-dateutil>=2.4.2
+requests>=2.7.0
+volapi
+ExifRead
 path.py
